<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jorgecaro.almacenamiento_jorge_caro.LoginActivity">

    <TextView
        android:id="@+id/biendvenidos_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/bienvenidos"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25dp"
        android:gravity="center"
         />

    <TextView
        android:id="@+id/iniciar_sesion_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/iniciar_sesion_tv"
        android:gravity="center"
         />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:src="@drawable/icon"
        android:layout_gravity="center"
        android:layout_margin="20dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_weight="3"
        android:id="@+id/til_nombre_usuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >
        <EditText
            android:id="@+id/edtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:hint="@string/nombre_usuario" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_weight="3"
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:hint="@string/password"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="3">
            <Button
                android:id="@+id/button_iniciar_sesion"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/iniciar_sesion"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="@color/cardview_light_background"
                android:layout_margin="5dp"

                />

            <Button
                android:id="@+id/button_registrar_usuario"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/registrar_usuario"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="@color/cardview_light_background"
                android:layout_margin="5dp"

                />
    </LinearLayout>
</LinearLayout>

