<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.jorgecaro.almacenamiento_jorge_caro.domain.donor.view.dialogs.AddDonorFragment"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtId"
            android:layout_width="383dp"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_id">

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_name">

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lastname" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/til_last_name">

        <EditText
            android:id="@+id/edt_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/age" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="0dp"
        android:id="@+id/bloodType"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/rh"
        app:layout_constraintTop_toBottomOf="@id/til_age"
        app:layout_constraintLeft_toLeftOf="parent">

    </Spinner>

    <Spinner
        android:id="@+id/rh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/bloodType"
        app:layout_constraintTop_toBottomOf="@id/til_age"
        app:layout_constraintRight_toRightOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bloodType"
        app:layout_constraintRight_toLeftOf="@id/til_height"
        app:layout_constraintLeft_toLeftOf="parent">
        <EditText
            android:id="@+id/edt_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/weigth" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rh"
        app:layout_constraintLeft_toRightOf="@id/til_weight"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/edt_height"
            android:layout_width="match_parent"
            android:ems="10"
            android:inputType="number"
            android:layout_height="match_parent"
            android:hint="@string/heigth"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:background="@android:color/holo_red_light"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@id/til_height"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel"/>
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@android:color/holo_red_light"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@id/til_height"
        app:layout_constraintRight_toLeftOf="@id/add"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
