<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.jorgecaro.almacenamiento_jorge_caro.domain.donor.view.dialogs.DeleteUserFragment"
    android:padding="50dp">

    <TextView
        android:id="@+id/delete_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_user_description"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/delete_user_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:background="@android:color/holo_red_light"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@id/delete_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/cancel"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@android:color/holo_red_light"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintTop_toBottomOf="@id/delete_description"
        app:layout_constraintLeft_toRightOf="@id/change_password"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"/>

</android.support.constraint.ConstraintLayout>
